test/files/neg/macro-incompatible-macro-engine/Macros_2.scala
import scala.language.experimental.macros
import scala.reflect.macros.BlackboxContext

object Macros {
  def impl(c: BlackboxContext) = c.universe.Literal(c.universe.Constant(()))
  def foo: Unit = macro impl
}